--- a/data/ui/MenulibreWindow.ui
+++ b/data/ui/MenulibreWindow.ui
@@ -1621,7 +1621,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkExpander" id="expander1">
+                      <object class="GtkExpander" id="categories_expander">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="use_markup">True</property>
